update page profile and update header

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,6 +3,19 @@
 @import '~/assets/scss/general/variables.scss';
 @import '~/assets/scss/themes/default.scss';
 @import '~/assets/scss/components/loading.scss';
+@import '~/assets/styles/auth.css';
+@import '~/assets/styles/avatar.css';
+@import '~/assets/styles/call_modal.css';
+@import '~/assets/styles/comments.css';
+@import '~/assets/styles/header.css';
+@import '~/assets/styles/home.css';
+@import '~/assets/styles/icons.css';
+@import '~/assets/styles/loading.css';
+@import '~/assets/styles/message.css';
+@import '~/assets/styles/post_thumb.css';
+@import '~/assets/styles/profile.css';
+@import '~/assets/styles/status_modal.css';
+
 
 // @import '~/assets/scss/themes/white.scss';
 // @import '~/assets/scss/themes/blue.scss';
