--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -15,6 +15,7 @@
 @import '~/assets/styles/post_thumb.css';
 @import '~/assets/styles/profile.css';
 @import '~/assets/styles/status_modal.css';
+@import '~/assets/styles/global.css';
 
 
 // @import '~/assets/scss/themes/white.scss';
